# datathon-hkbaleycb4

./: .gitignore  README.md  pyproject.toml
knowledge/: DeThi.md  schema.md
notebooks/: data.ipynb  drawchart.ipynb  eda_story_report.ipynb  full_matplotlib_eda.ipynb  guide_lightgbm_time_series_vi.ipynb  guide_train_baseline_vi.ipynb  guide_train_time_series_vi.ipynb  question.ipynb  train_model_via_baseline_forecasting.ipynb  visualize.ipynb  visualize_train_output.ipynb
report/: baseline_linear_regression.md  baseline_time_series.md  round1_summary.md  submission_runbook.md  time_series_training_explained_vi.md
src/: __init__.py  config.py  csv_io.py  data_prep.py  feature_store-Copy1.py  feature_store.py  forecasting.py  part1_solver.py  visualization.py
tasks/: todo.md
